<resources>
    <string name="app_name">LogicaApp</string>
    <string name="title">Conjunction (AND)</string>
    <string name="T">T</string>
    <string name="F">F</string>
    <string name="A">A</string>
    <string name="B">B</string>
    <string name="AandB">A Λ B</string>
    <string name="submitAnswers">Submit Answers</string>
    <string name="lol">lol</string>
    <string name="correct_answers">The number of correct answers is: %d</string>
</resources>
