<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="216dp"
        android:layout_height="263dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/title">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="70dp">

            <TextView
                android:id="@+id/A"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:text="@string/A"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/b"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:text="@string/B"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/b2"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:text="@string/AandB"
                android:textAlignment="center"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/trueText"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:text="@string/T"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/trueText3"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:text="@string/T"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/answer1"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:textAlignment="center" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/trueText4"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:text="@string/T"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/trueText5"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:text="@string/F"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/answer2"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:textAlignment="center" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/trueText6"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:text="@string/F"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/trueText2"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:text="@string/F"
                android:textAlignment="center"
                app:layout_constraintHorizontal_bias="0.046"
                app:layout_constraintVertical_bias="0.512" />

            <EditText
                android:id="@+id/answer3"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:textAlignment="center" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/trueText8"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:text="@string/F"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/trueText7"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:text="@string/F"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/answer4"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:textAlignment="center" />

        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/submitAnswers"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>